<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainFragment">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_vertical_margin"
        android:visibility="visible">

        <TextView
            android:id="@+id/textViewBothEye"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="@string/both_eyes"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/category_title" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textViewBothEye"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/use_start_date" />

        <Button
            android:id="@+id/textViewBothUseStartDate"
            style="@style/ButtonSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/view2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@+id/view2"
            android:layout_below="@+id/textView2"
            android:textAppearance="?android:attr/textAppearanceMedium"
            tools:text="@string/sample_date" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/border_width"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textViewBothUseStartDate"
            android:background="@color/border" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textViewBothUseStartDate"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/use_end_date" />

        <TextView
            android:id="@+id/textViewBothUseEndDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView3"
            android:paddingBottom="@dimen/value_vertical_padding"
            android:paddingTop="@dimen/value_vertical_padding"
            android:textAppearance="?android:attr/textAppearanceMedium"
            tools:text="@string/sample_date" />

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/border_width"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textViewBothUseEndDate"
            android:background="@color/border" />

    </RelativeLayout>

</ScrollView>
