<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/right_eye"
        android:textColor="@color/category_title" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/use_start_date" />

    <TextView
        android:id="@+id/textView1"
        style="@style/Widget.AppCompat.Spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/view"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/view"
        android:layout_below="@+id/textView3"
        tools:text="@string/sample_date" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView1"
        android:background="@color/border" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/use_end_date" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView4"
        android:layout_marginBottom="@dimen/value_vertical_margin"
        android:layout_marginTop="@dimen/value_vertical_margin"
        tools:text="@string/sample_date" />

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView2"
        android:background="@color/border" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/view2"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/left_eye"
        android:textColor="@color/category_title" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView5"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/use_start_date" />

    <TextView
        android:id="@+id/textView7"
        style="@style/Widget.AppCompat.Spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/view3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/view3"
        android:layout_below="@+id/textView6"
        tools:text="@string/sample_date" />

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView7"
        android:background="@color/border" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView7"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/use_end_date" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView8"
        android:layout_marginBottom="@dimen/value_vertical_margin"
        android:layout_marginTop="@dimen/value_vertical_margin"
        tools:text="@string/sample_date" />

    <View
        android:id="@+id/view4"
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView9"
        android:background="@color/border" />

</RelativeLayout>
