<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainFragment">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_vertical_margin"
        android:visibility="visible">

        <TextView
            android:id="@+id/textViewRightEye"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="@string/right_eye"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/category_title" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textViewRightEye"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/use_start_date" />

        <Button
            android:id="@+id/textViewRightUseStartDate"
            style="@style/ButtonSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/view2"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="false"
            android:layout_below="@+id/textView2"
            android:textAppearance="?android:attr/textAppearanceMedium"
            tools:text="@string/sample_date" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/border_width"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textViewRightUseStartDate"
            android:background="@color/border" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textViewRightUseStartDate"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/use_end_date" />

        <TextView
            android:id="@+id/textViewRightUseEndDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView3"
            android:paddingBottom="@dimen/value_vertical_padding"
            android:paddingTop="@dimen/value_vertical_padding"
            android:textAppearance="?android:attr/textAppearanceMedium"
            tools:text="@string/sample_date" />

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/border_width"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textViewRightUseEndDate"
            android:background="@color/border" />

        <TextView
            android:id="@+id/textViewLeftEye"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/view2"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/left_eye"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/category_title" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textViewLeftEye"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/use_start_date" />

        <Button
            android:id="@+id/textViewLeftUseStartDate"
            style="@style/ButtonSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="false"
            android:layout_below="@+id/textView5"
            android:textAppearance="?android:attr/textAppearanceMedium"
            tools:text="@string/sample_date" />

        <View
            android:id="@+id/view3"
            android:layout_width="match_parent"
            android:layout_height="@dimen/border_width"
            android:layout_alignBottom="@+id/textViewLeftUseStartDate"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="@color/border" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textViewLeftUseStartDate"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/use_end_date" />

        <TextView
            android:id="@+id/textViewLeftUseEndDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView6"
            android:paddingBottom="@dimen/value_vertical_padding"
            android:paddingTop="@dimen/value_vertical_padding"
            android:textAppearance="?android:attr/textAppearanceMedium"
            tools:text="@string/sample_date" />

        <View
            android:id="@+id/view4"
            android:layout_width="match_parent"
            android:layout_height="@dimen/border_width"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textViewLeftUseEndDate"
            android:background="@color/border" />
    </RelativeLayout>

</ScrollView>
